--- a/DataMungingPPT.Rmd
+++ b/DataMungingPPT.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Top Movies"
+title: "IMDB Top Movies"
 author: "Melvin Adkins, Raymond Blaha, Paul Hwang, Stephanie Diaz Ortega"
 output: ioslides_presentation
 fontsize: 12pt
